--- a/test.html
+++ b/test.html
@@ -1,29 +1,143 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>OneMap API Example</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-</head>
-<body>
-    <h1>OneMap API Example</h1>
 
-    <div id="result"></div>
+<head>
+    <title>OneMap Static Map Example</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@latest"></script>
+    <style>
+        #map {
+            width: 70%;
+            height: 400px;
+            float: left;
+        }
+
+        #controls {
+            width: 30%;
+            height: 400px;
+            float: left;
+            padding: 120px;
+        }
+
+        #controls input[type="text"],
+        #controls button {
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+
+<body>
+    <div id="map"></div>
+    <!-- <div id="result"></div> -->
+
+    <div id="controls">
+        <p> <label for="startlat">起点纬度：</label>
+            <input type="text" id="startlat" placeholder="请输入起点纬度">
+        </p>
+        <p>
+            <label for="startlng">起点经度：</label>
+            <input type="text" id="startlng" placeholder="请输入起点经度">
+        </p>
+        <button onclick="updateMap()">生成地图</button>
+    </div>
+
 
     <script>
+        var startlat = '1.30000';
+        var startlng = '103.84223';
+        var endlat = '1.31801';
+        var endlng = '103.84224';
+        // var startlat;
+        // var startlng;
+        // var endlat;
+        // var endlng;
+        var zoom = 19;
+        var height = '512';
+        var width = '512';
+        var mapDiv = document.getElementById('map');
+        var mapUrl = 'https://developers.onemap.sg/commonapi/staticmap/getStaticImage?layerchosen=default&';
+
+        function initMap() {
+            var midlat = (parseFloat(startlat) + parseFloat(endlat)) / 2;
+            var midlng = (parseFloat(startlng) + parseFloat(endlng)) / 2;
+            var startpoint = '[' + startlat + ',' + startlng + ',"255,255,178","A"]';
+            var endpoint = '[' + endlat + ',' + endlng + ',"175,50,0","B"]';
+            var imageUrl = mapUrl + 'lat=' + midlat + '&lng=' + midlng + '&zoom=' + zoom + '&height=' + height + '&width=' + width + '&ploygons=' + '&lines=' + '&points=' + startpoint + '|' + endpoint;
+
+            var mapImg = document.createElement('img');
+            var max = 5;
+            var count = 0;
+
+            mapImg.onload = function () {
+                // 图像加载完成后执行此回调函数，用于判断起点是否在地图中
+                var imageBounds = mapImg.getBoundingClientRect();
+                var mapBounds = mapDiv.getBoundingClientRect();
+
+                var startCoordinates = [parseFloat(startlng), parseFloat(startlat)];
+                var endCoordinates = [parseFloat(endlng), parseFloat(endlat)];
+
+                var transformedStartCoordinates = turf.toMercator(turf.point(startCoordinates));
+                var transformedEndCoordinates = turf.toMercator(turf.point(endCoordinates));
+                var startx = (transformedStartCoordinates.geometry.coordinates[0] - midlng) * imageBounds.width / (imageBounds.width * 2) + mapBounds.width / 2;
+                var starty = (transformedStartCoordinates.geometry.coordinates[1] - midlat) * imageBounds.height / (imageBounds.height * 2) + mapBounds.height / 2;
+
+                var endx = (transformedEndCoordinates.geometry.coordinates[0] - midlng) * imageBounds.width / (imageBounds.width * 2) + mapBounds.width / 2;
+                var endy = (transformedEndCoordinates.geometry.coordinates[1] - midlat) * imageBounds.height / (imageBounds.height * 2) + mapBounds.height / 2;
+
+
+
+                if (((endx < 0 || endx > mapBounds.width || endy < 0 || endy > mapBounds.height) || (startx < 0 || startx > mapBounds.width || starty < 0 || starty > mapBounds.height)) && max >= 0) {
+                    zoom--; // 递减缩放级别
+                    // 更新地图图像URL和位置信息
+                    imageUrl = mapUrl + 'lat=' + midlat + '&lng=' + midlng + '&zoom=' + zoom + '&height=' + height + '&width=' + width + '&ploygons=' + '&lines=' + '&points=' + startpoint + '|' + endpoint;
+                    mapImg.src = imageUrl;
+                    max--;
+                    count++;
+                    console.log("out the map", zoom);
+                }
+                else {
+                    mapDiv.appendChild(mapImg);
+                    console.log("in the map:", count);
+                }
+            };
+
+            mapImg.src = imageUrl;
+            mapDiv.appendChild(mapImg);
+        }
+
+        $(document).ready(function () {
+            initMap();
+        });
+    </script>
+    <script>
+        function updateMap(){
+            
+        }
+    </script>
+    <!-- <script>
         // 当页面加载完成后执行
-        $(document).ready(function() {
+        $(document).ready(function () {
+            var location = "Singapore";
+
             // 调用API的端点URL
             var apiUrl = "https://developers.onemap.sg/";
 
             // 构建API请求URL
-            var requestUrl = apiUrl + "commonapi/search?searchVal=Singapore&returnGeom=Y&getAddrDetails=Y";
+            var requestUrl = apiUrl + "commonapi/search?searchVal=" + location + "&returnGeom=Y&getAddrDetails=N";
 
             // 发送GET请求
-            $.get(requestUrl, function(data) {
-                // 处理返回的数据
-                $("#result").text(JSON.stringify(data));
+            $.get(requestUrl, function (data) {
+                // 提取LATITUDE和LONGITUDE信息
+                startlat = data.results[0].LATITUDE;
+                startlng = data.results[0].LONGITUDE;
+
+                // var resultText = "Latitude: " + latitude + "<br>Longitude: " + longitude;
+                // $("#result").html(resultText);
+                initMap();
             });
         });
-    </script>
+    </script> -->
+
 </body>
+
 </html>
