--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -5,7 +5,8 @@
 
 	<link rel="stylesheet" href="leaflet.css" />
 	<script src="leaflet.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> -->
+	<script src="jquery.min.js"></script>
 	<script src="leaflet-providers-added-onemap.js"></script>
 	<script src="Polyline.encoded.js"></script>
 </head>
