--- a/idex.html
+++ b/idex.html
@@ -17,10 +17,11 @@
     <script>
         var map = L.map('map').setView([1.3521, 103.8198], 13);
         L.tileLayer.provider('OneMap.Grey').addTo(map);
+        L.marker([1.3521, 103.8198]).addTo(map);
         // 创建地图实例并设置中心坐标和初始缩放级别
         // var map = L.map('map').setView([51.505, -0.09], 13);
 
-        // 创建图层并添加到地图
+        // // 创建图层并添加到地图
         // L.tileLayer.provider('OpenStreetMap.Mapnik').addTo(map);
 
     </script>
