--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -3,21 +3,21 @@
 <head>
 	<title>OneMap 2.0</title>
 
-	<link rel="stylesheet" href="leaflet.css" />
-	<script src="leaflet.js"></script>
-	<script src="jquery.min.js"></script>
-	<script src="leaflet-providers-added-onemap.js"></script>
-	<script src="Polyline.encoded.js"></script>
+	<link rel="stylesheet" href="./css/leaflet.css" />
+	<script src="./library/leaflet.js"></script>
+	<script src="./library/jquery.min.js"></script>
+	<script src="./library/leaflet-providers-added-onemap.js"></script>
+	<script src="./library/Polyline.encoded.js"></script>
 </head>
 
 <body>
 	<h1>Singapore Map</h1>
 	<div id='mapdiv' style='height:700px;'></div>
 
+	<script src="initmap.js"></script>
 	<script src="Routing.js"></script>
+	<script src="connect_db.js"></script>
+	<script src="drawpoint.js"></script>
 </body>
-
-
-
 
 </html>
