--- a/project/publish/onemaps2.0.html
+++ b/project/publish/onemaps2.0.html
@@ -43,8 +43,8 @@
         </p>
         <button onclick="updateMap()">生成地图</button>
     </div>
-    <script src = "requirment.js"></script>
-	<!-- <script src="Routing.js"></script> -->
+    <!-- <script src = "requirment.js"></script> -->
+	<script src="Routing.js"></script>
 </body>
 
 </html>
