--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -18,8 +18,7 @@
 
 	<script src="./work/initmap.js"></script>
 	<script src="./work/call_db.js"></script>
-	<!-- <script src="Routing.js"></script> -->
-	<!-- <script src="drawpoint.js"></script> -->
+	<script src="./work/Routing.js"></script>
 	
 </body>
 
