--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -17,7 +17,7 @@
 	<div id='mapdiv' style='height:700px;'></div>
 
 	<script src="./work/initmap.js"></script>
-	<script src="./work/call_db.js"></script>
+	<script src="./work/app.js"></script>
 	<script src="./work/Routing.js"></script>
 	
 </body>
