--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -17,9 +17,34 @@
 	<div id='mapdiv' style='height:700px;'></div>
 
 	<script src="./work/initmap.js"></script>
-	<script src="./work/app.js"></script>
-	<script src="./work/Routing.js"></script>
-	
+	<script src="./work/call_db.js"></script>
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			// 加载initmap.js脚本
+			var script = document.createElement('script');
+			script.src = './work/initmap.js';
+			script.onload = function () {
+				console.log('initmap.js loaded');
+				// 在initmap.js加载完成后执行回调函数
+				loadCallDBScript();
+			};
+			document.head.appendChild(script);
+		});
+
+		function loadCallDBScript() {
+			// 加载call_db.js脚本
+			var script = document.createElement('script');
+			script.src = './work/call_db.js';
+			script.onload = function () {
+				console.log('call_db.js loaded');
+				// 在call_db.js加载完成后执行逻辑
+				// ...
+			};
+			document.head.appendChild(script);
+		}
+	</script>
+	<!-- <script src="./work/Routing.js"></script> -->
+
 </body>
 
 </html>
