--- a/onemaps2.0.html
+++ b/onemaps2.0.html
@@ -8,7 +8,7 @@
 	<script src="./library/jquery.min.js"></script>
 	<script src="./library/leaflet-providers-added-onemap.js"></script>
 	<script src="./library/Polyline.encoded.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<script src="./library/axios.min.js"></script>
 
 </head>
 
