--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="./library/jquery.min.js"></script>
 	<script src="./library/leaflet-providers-added-onemap.js"></script>
 	<script src="./library/Polyline.encoded.js"></script>
-	<script src="./library/axios.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 
 </head>
@@ -76,8 +76,8 @@
 
 
 	<script src="./work/initmap.js"></script>
-	<!-- <script src="./work/call_db.js"></script> -->
-	<!-- <script>
+	<script src="./work/call_db.js"></script>
+	 <!-- <script>
 		document.addEventListener("DOMContentLoaded", function () {
 			// 加载initmap.js脚本
 			var script = document.createElement('script');
